src/styles/templates/main.scss
@use "sass:math";

@import '../base/variables';
@import '../base/mixins';

.eclipse-jkube {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
.eclipse-jkube__main {
  flex: 1;
  @media all and (min-width: $desktop-max-width) {
    // Required by hero component: when there's a vertical scroll bar this extra width makes the horizontal scroll bar appear
    overflow-x: hidden;
  }
  & .eclipse-jkube__content {
    margin: 0 $default-spacing;
    @media all and (min-width: $desktop-max-width) {
      max-width: $desktop-max-width - $default-spacing;
      margin: 0 auto;
    }
    img {
      max-width: 100%;
    }
    :not(pre) > code[class*="language-"], pre[class*="language-"] {
      background-color: transparent;
    }
    .eclipse-jkube-tabs__tab-title--sm {
      position: relative;
      svg {
        $title-margin: 0.3rem;
        &:nth-child(1) {
          z-index: 1;
          opacity: 75%;
          padding-top: $title-margin * 1.5;
          padding-right: $title-margin * 3;
        }
        &:nth-child(2) {
          position: absolute;
          z-index: 0;
          height: 1.1rem;
          top: $title-margin;
          right: $title-margin;
        }
      }
    }
    .section-dark {
      @include full-width;
      background-color: $color-dark-background;
      color: $color-dark-foreground;
      margin: 0 #{-$default-spacing};
      padding: $default-spacing;
      @media all and (min-width: $desktop-max-width) {
        padding: $default-spacing calc((100% - #{$desktop-max-width})/2);
      }
      > * {
        @media all and (min-width: $desktop-max-width) {
          padding: 0 calc((100% - #{$desktop-max-width})/2);
        }
      }
    }
    & .getting-involved {
      color: $color-dark-foreground;
      margin: 0 #{-$default-spacing};
      padding: 0 $default-spacing;
      display: flex;
      justify-content: flex-end;
    }
    & .highlight {
      display: flex;
      align-items: center;
      gap: ($default-spacing * 2);
      img {
        display: none;
        max-width: 100px;
        @media all and (min-width: $desktop-min-width){
          display:block;
        }
      }
      &-description {
        flex: 1;
        min-width: 1px;
      }
      ul {
        flex: 1;
        min-width: 1px;
        margin: 0;
        padding: 0;
      }
      li {
        list-style: none;
        margin: $default-spacing 0;
      }
    }
    & .calendar {
      $calendar-aspect-ratio: 75;
      $calendar-max-height: 500px;
      $calendar-width-break: math.div($calendar-max-height, ($calendar-aspect-ratio * 0.01));
      position: relative;
      overflow: hidden;
      padding-bottom: $calendar-aspect-ratio * 1%;
      margin-bottom: $default-spacing;
      @media all and (min-width: $calendar-width-break) {
        padding-bottom: 0;
        height: $calendar-max-height;
      }
      iframe {
        position: absolute;
        top: 0;
        height: 100%;
        max-height: $calendar-max-height;
        width: 100%;
      }
    }
  }
}

